Carriage return character sometimes missing in SDP c-line https://bugs.webkit.org/show_bug.cgi?id=203190

Reviewed by Eric Carlson.

Source/WebCore:

Covered by updated test.

* Modules/mediastream/PeerConnectionBackend.cpp:
(WebCore::PeerConnectionBackend::filterSDP const):
Add missing\r when filterig the c line.

LayoutTests:

* webrtc/datachannel/filter-ice-candidate.html:


Canonical link: https://commits.webkit.org/216679@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251442 268f45cc-cd09-0410-ab3c-d52691b4dbfc